[package]
name = "i3s"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.30"
reqwest = { version = "0.12.5", features = ["json", "gzip"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
zip = "=2.1.1"                                                           # https://github.com/zip-rs/zip2/issues/189
